# codex-island-app

./: .gitignore  .swiftformat  .swiftlint.yml  AGENTS.md  README.md  README.zh-CN.md
.githooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.github/workflows/: swift-quality.yml
CodexIsland.xcodeproj/: project.pbxproj
CodexIsland/App/: AppDelegate.swift  AppLaunchContext.swift  WindowManager.swift
CodexIsland/Core/: NotchGeometry.swift  NotchViewModel.swift  Settings.swift
CodexIsland/Models/: ChatMessage.swift  PendingInteraction.swift  RemoteApprovalModels.swift  RemoteSessionState.swift  SessionEvent.swift  SessionRuntimeInfo.swift  SessionState.swift  (+1 more)
CodexIslandTests/: AppLaunchContextTests.swift  ChatHistoryManagerTests.swift  CodexConversationParserTests.swift  HookInstallerTests.swift  NotchViewModelTests.swift  PendingInteractionTests.swift  ProcessExecutorTests.swift  SessionStoreTests.swift
docs/: android-v1-acceptance-matrix.md
engine/: Cargo.toml  README.md
engine/crates/island-client-ffi/: Cargo.toml
engine/crates/island-client-ffi/src/: lib.rs
engine/crates/island-core/: Cargo.toml
engine/crates/island-core/src/: lib.rs
engine/crates/island-hostd/: Cargo.toml
engine/crates/island-hostd/src/: lib.rs  main.rs
engine/crates/island-proto/src/: lib.rs
engine/docs/: shell-adapter-contract.md
scripts/: android-bootstrap.sh  android-test.sh  create-release.sh  generate-engine-bindings.sh  install-git-hooks.sh  prepare-macos-engine-ffi.sh  run-beads-hook.sh  run-hostd-acceptance.sh  swift-quality.sh
(+90 files in other folders)
