[workspace]
members = [
    "crates/island-proto",
    "crates/island-core",
    "crates/island-client-ffi",
    "crates/island-hostd",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Jarcis-cy/codex-island-app"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uniffi = "0.31.0"
